Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126752

Calling popup() on QCompleter causes an abnormal behavior of the Qt virtual keyboard.

XMLWordPrintable

    • Linux/X11, Windows
    • 93ce8f13f (dev), 38e889924 (6.8), 8f16cdd2f (6.7), 60b4ede80 (tqtc/lts-6.5)

      This is an issue related to the focus of the QCompleter::popup() and Qt virtual keyboard(if entered using the physical keyboard, there is no issue).
      The issue exists regardless of whether it is Qt5 (Qt5.15.17) or Qt6 (Qt6.6.2), and regardless of whether it is on Linux or Windows.

      Steps to reproduce:
      1. Run the demo and click on the first lineedit, which will trigger the Qt virtual keyboard to appear.
      2. Switch the virtual keyboard to English input and enter the character 'a'. At this point, the QCompleter will display the listview with 'alpha'.

      3. On Windows 10, continue using the virtual keyboard to enter the character 'l'. The listview disappears, and the lineedit still only shows the character 'a'.
      The expected result should be that the listview of the popup does not disappear, and the lineedit should show 'al'.

      3. On Linux (Ubuntu + Qt5.15.17), when the 'alpha' listview pops up, the virtual keyboard gets hidden.
      If using Qt 6.7.2, it is possible that the virtual keyboard does not hide immediately due to the application of this patch(https://bugreports.qt.io/browse/QTBUG-108522). However, when continuing to click on the 'l' key on the virtual keyboard for input, the keyboard will hide. At this point, the lineedit will also only have the character 'a'.

        1. CompleterDemo.zip
          3 kB
          Yang Liu
        2. qtbug126752_log.txt
          19 kB
          Friedemann Kleint
        3. qtbug126752_qtbase_diag.diff
          2 kB
          Friedemann Kleint
        4. qtbug126752_vkb_diag.diff
          3 kB
          Friedemann Kleint
        5. qtbug126752.zip
          3 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            axelspoerl Axel Spoerl
            fnoily Yang Liu
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: